--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.eldarz.daggerexample.MainActivity">
+    tools:context="com.eldarz.dagger2simpleexample.MainActivity">
 
     <TextView
         android:id="@+id/some_text"
